# fiap4

./: .gitignore  .vercelignore  Makefile  README.md  fiap4.txt  gen_presentation.py  insomnia_workspace.json  pyproject.toml  requirements.txt  vercel.json
.devcontainer/: devcontainer.json
api/: dashboard.py  main.py
api/domain/models/: prediction.py  stock.py
api/domain/repositories/: stock_repository.py
api/domain/usecases/: analytics_service.py
api/domain/usecases/health/: get_health_status.py
api/domain/usecases/predictions/: get_model_info.py  predict_stock_price.py
api/domain/usecases/stocks/: get_stock_data.py  get_stock_history.py
api/infra/repositories/: stock_repository_impl.py
api/presentation/factories/: repository_factory.py
api/presentation/middlewares/: error_handlers.py  performance_middleware.py
api/presentation/routes/: analytics.py  health.py  predictions.py  router.py  stocks.py
api/utils/: logger.py
artifacts/: best_model.keras  final_model.keras  final_model.onnx  metadata.json  metrics.json  scaler_X.joblib  scaler_y.joblib
dashboard/: dashboard.py  requirements.txt
data/: model_weights.json  scaler_params.json  stock_data.csv
scripts/: basic_model.py  convert_to_onnx.py  gen_insomnia_json.py  generate_sample_data.py  train_model.py
